syntax = "proto3";

option go_package = ".;gen";

import "google/api/annotations.proto";

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string accountID = 4;
}

message Users {
    repeated User users = 1;
}

message GetUsersRequest {}

message GetUserRequest {
    string id = 1;
}

message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string username = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

service AuthService {
    rpc GetUsers(GetUsersRequest) returns (Users) {
        option (google.api.http) = {
            get: "/v1/auth/users"
        };
    }

    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/auth/users"
            body: "*"
        };
    }

    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/auth/login"
            body: "*"
        };
    }
}